# sphinxcontrib-autoyaml

./: pyproject.toml
sphinxcontrib/autoyaml/: __init__.py
